<resources>
    <string name="app_name">UiComponent</string>

    <string name="action_settings">Settings</string>

    <string name="menu_font">字体大小</string>
    <string name="menu_normal">普通菜单项</string>
    <string name="menu_color">字体颜色</string>
    <string name="menu_font_small">小号</string>
    <string name="menu_font_medium">中号</string>
    <string name="menu_font_large">大号</string>
    <string name="menu_color_red">红色</string>
    <string name="menu_color_black">黑色</string>

    <string name="simple_adapter_demo">SimpleAdapterDemo</string>
    <string name="custom_dialog_demo">CustomDialogDemo</string>
    <string name="xml_menu_demo">XmlMenuDemo</string>
    <string name="action_context_demo">ActionContextDemo</string>
    <string name="process_bar_demo">ProcessBarDemo</string>

    <string name="show_alertdialog">Show AlertDialog</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="android_app">ANDROID APP</string>
    <string name="menu_function_test_text">菜单功能测试文本</string>

    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>

</resources>